# algorithm

./: CMakeLists.txt
go/: main.go
go/sorting/: sort_algorithms.go
go/sorting_test/: sort_algorithms_test.go
qt/src/sort/: CMakeLists.txt
qt/tests/sort/: CMakeLists.txt  testsort.cpp  testsort.h
src/sort/: sort.cpp  sort.h
tests/sort/: testsort.cpp  testsort.h
